# public_website

./: README.md  config.toml  make_til_entry.py  package-lock.json  package.json  pyproject.toml
content/: _index.md  about.md
content/home/: index.md
content/post/: 2023-reply-to-toast-to-lci.md  240421_mastodon_new_developer_advice.md  a-full-pun-net-of-avocados.md  accessing-protected-pulumi-outputs-with-a-pgp-key.md  actually-atlassian-i-can-do-my-job.md  convoluted_soln_to_listening_to_podcasts.md  dragged-in-by-boris-the-web-spider.md  dstv-loud-channel-problem.md  gmail_tips.md  jabber-evil-genius.md  kubectl_secret_extract.md  nothing-else-matters-but-a-good-pun.md  public-speaking-tips.md  pulumi-cant-find-objects.md  pulumi-get-urns.md  the-atmosphere-was-electric.md  this-decades-emacs-appreciation-post.md  wherein-2-is-shown-to-be-equal-to-1.md
content/post/software/: a-few-nifty-emacs-features.md  better-pyproject-extract.md  building-lambda-layer-non-pure-python.md  c-code-that-could-get-you-fired.md  c-code-you-should-never-use-in-production.md  changing-from-writing-files-to-subdirectories-on-a-local-filesystem-to-an-s3-bucket-with-a-few-lines-of-code.md  connecting-to-an-older-mssql-server-via-odbc-on-ubuntu-2204.md  dynamic-stored-proc-endpoints.md  in-praise-of-rich-and-rich-cli.md  plaintive-cry-to-some-of-the-users-of-delphi-7.md  plaintive-cry-to-the-developers-of-delphi-7.md  preventing_ms_teams_from_using_play_button.md  (+4 more)
layouts/partials/: footer.html
static/: _headers
static/css/: prism.css
static/js/: prism.js
(+27 files in other folders)
