[tool.poetry]
name = "personal_website"
version = "0.1.0"
description = "Supporting scripts and dependencies for my own Hugo based website"
authors = ["Kim van Wyk <kimv@sahomeloans.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.11.0"
arrow = "^1.1.1"
cogapp = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
